name:                hwk
version:             0.1.0.0
synopsis:            A modern Haskell based AWK replacement
homepage:            https://github.com/lukasmartinelli/hwk
license:             MIT
license-file:        LICENSE
author:              Lukas Martinelli
maintainer:          me@lukasmartinelli.ch
copyright:           Lukas Martinelli
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hwk.Parse
  build-depends:       base >=4.8, haskell-src-exts >=1.17, hint >= 0.4

executable hwk
  hs-source-dirs:      src
  main-is:             Main.hs
  exposed-modules:     Hwk.Parse
  build-depends:       base >=4.8, haskell-src-exts >=1.17, hint >= 0.4
  default-language:    Haskell2010

test-suite hwk-tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >=4.8, haskell-src-exts >=1.17,
                       hspec >= 1.3, hwk
  default-language:    Haskell2010
