name:                hwk
version:             0.1.0.0
synopsis:            A modern Haskell based AWK replacement
homepage:            https://github.com/lukasmartinelli/hwk
license:             MIT
license-file:        LICENSE
author:              Lukas Martinelli
maintainer:          me@lukasmartinelli.ch
copyright:           Lukas Martinelli
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hwk.Generate
  build-depends:       base >=4.8, unix
  default-language:    Haskell2010

executable hwk
  main-is:             hwk.hs
  build-depends:       base >=4.8, unix, hwk
  default-language:    Haskell2010
